tests/operator/not_str.rev
!"5" // error: can't use '!' token on anything other than a bool value